// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientCard renders the ClientCard component 1`] = `
.c7 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0.01em;
  -moz-letter-spacing: 0.01em;
  -ms-letter-spacing: 0.01em;
  letter-spacing: 0.01em;
  font-family: Roboto;
  color: inherit;
}

.c16 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0.01em;
  -moz-letter-spacing: 0.01em;
  -ms-letter-spacing: 0.01em;
  letter-spacing: 0.01em;
  font-family: Roboto;
  color: #8D8DA6;
}

.c21 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0.01em;
  -moz-letter-spacing: 0.01em;
  -ms-letter-spacing: 0.01em;
  letter-spacing: 0.01em;
  font-family: Roboto;
  color: #242433;
}

.c4 {
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
  font-family: Work Sans;
  color: #242433;
}

.c14 {
  fill: #105225;
}

.c1 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  grid-column-gap: 16px;
  grid-row-gap: 16px;
  max-width: 1224px;
  margin: auto;
}

.c10 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  grid-column-gap: 12px;
  grid-row-gap: 12px;
  max-width: 1224px;
  margin: auto;
}

.c2 {
  justify-self: start;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  grid-column: span 6;
}

.c8 {
  grid-column: span 12;
}

.c11 {
  justify-self: start;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  grid-column: span 12;
}

.c6 {
  padding: 2px 12px;
  background-color: #E0FFEA;
  color: #105225;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 1000px;
}

.c13 {
  padding: 2px 12px 2px 8px;
  background-color: #E0FFEA;
  color: #105225;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 1000px;
}

.c5 {
  margin-right: 12px;
}

.c15 {
  margin-right: 8px;
}

.c17 {
  margin-top: 8px;
}

.c18 {
  margin-top: 12px;
}

.c19 {
  width: 100%;
  border-color: #F0F0FA;
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  background-color: #FAFAFF;
}

.c19 th,
.c19 td {
  padding: 8px;
  text-align: left;
}

.c19 th:nth-child(,1,),
.c19 td:nth-child(,1,) {
  width: ,100,%;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  width: 100%;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  display: block;
  width: 100%;
  border-width: 1px;
  border-style: solid;
  padding: 16px;
  background-color: #FFFFFF;
  border-color: #D5D5E7;
  border-radius: 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:1366px) {
  .c1 {
    grid-gap: 24px;
  }
}

@media (min-width:1366px) {
  .c10 {
    grid-gap: 24px;
  }
}

@media (min-width:768px) {

}

@media (min-width:1024px) {

}

@media (min-width:1366px) {

}

@media (min-width:1920px) {

}

@media (min-width:768px) {

}

@media (min-width:1024px) {

}

@media (min-width:1366px) {

}

@media (min-width:1920px) {

}

@media (min-width:768px) {

}

@media (min-width:1024px) {

}

@media (min-width:1366px) {

}

@media (min-width:1920px) {

}

<body>
  <div>
    <div
      data-testid="client-card"
    >
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <div
              class="c3"
            >
              <div
                aria-level="5"
                class="c4"
                role="heading"
              >
                Federico
                 
                Garcia
              </div>
              <div
                class="c5"
              />
              <div
                class="c6"
                color="green"
              >
                <span
                  class="c7"
                  color="inherit"
                >
                  Onboarding completo
                </span>
              </div>
            </div>
          </div>
          <div
            class="c8"
          >
            <div
              class="c9"
            >
              <div>
                <div
                  class="c10"
                  spacing="s"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c12"
                    >
                      <div
                        class="c13"
                        color="green"
                      >
                        <svg
                          class="c14"
                          color="green"
                          fill="none"
                          viewBox="0 0 28 28"
                          width="20px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M19.996 9.56a.778.778 0 0 1 0 1.1l-7.78 7.78a.778.778 0 0 1-1.1 0l-3.112-3.112a.778.778 0 0 1 1.1-1.1l2.562 2.562 7.23-7.23a.778.778 0 0 1 1.1 0Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                        <span
                          class="c7"
                          color="inherit"
                        >
                          Email Validado
                        </span>
                      </div>
                      <div
                        class="c15"
                      />
                      <span
                        class="c16"
                        color="neutral"
                      >
                        El cliente ya validó su correo electrónico
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="c17"
                />
              </div>
              <div>
                <div
                  class="c10"
                  spacing="s"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c12"
                    >
                      <div
                        class="c13"
                        color="green"
                      >
                        <svg
                          class="c14"
                          color="green"
                          fill="none"
                          viewBox="0 0 28 28"
                          width="20px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M19.996 9.56a.778.778 0 0 1 0 1.1l-7.78 7.78a.778.778 0 0 1-1.1 0l-3.112-3.112a.778.778 0 0 1 1.1-1.1l2.562 2.562 7.23-7.23a.778.778 0 0 1 1.1 0Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                        <span
                          class="c7"
                          color="inherit"
                        >
                          Validado en Renaper
                        </span>
                      </div>
                      <div
                        class="c15"
                      />
                      <span
                        class="c16"
                        color="neutral"
                      >
                        El cliente ya validó su identidad en el Registro Nacional de las Personas
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="c17"
                />
              </div>
              <div>
                <div
                  class="c10"
                  spacing="s"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c12"
                    >
                      <div
                        class="c13"
                        color="green"
                      >
                        <svg
                          class="c14"
                          color="green"
                          fill="none"
                          viewBox="0 0 28 28"
                          width="20px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M19.996 9.56a.778.778 0 0 1 0 1.1l-7.78 7.78a.778.778 0 0 1-1.1 0l-3.112-3.112a.778.778 0 0 1 1.1-1.1l2.562 2.562 7.23-7.23a.778.778 0 0 1 1.1 0Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                        <span
                          class="c7"
                          color="inherit"
                        >
                          Validado en Facephi
                        </span>
                      </div>
                      <div
                        class="c15"
                      />
                      <span
                        class="c16"
                        color="neutral"
                      >
                        El cliente ya validó su identidad biométrica
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="c17"
                />
              </div>
            </div>
            <div
              class="c18"
            />
            <table
              class="c19"
            >
              <tbody>
                <tr>
                  <td>
                    <div
                      class="c20"
                    >
                      <span
                        class="c16"
                        color="neutral"
                      >
                        Fecha de Nacimiento
                      </span>
                      <div
                        class="c5"
                      />
                      <span
                        class="c21"
                      >
                        1/23/1983
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td>
                    <div
                      class="c20"
                    >
                      <span
                        class="c16"
                        color="neutral"
                      >
                        Email
                      </span>
                      <div
                        class="c5"
                      />
                      <span
                        class="c21"
                      >
                        federico@gmail.com
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td>
                    <div
                      class="c20"
                    >
                      <span
                        class="c16"
                        color="neutral"
                      >
                        Dirección Legal
                      </span>
                      <div
                        class="c5"
                      />
                      <span
                        class="c21"
                      >
                        AV. Corrientes • 1700 • Neuquen
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td>
                    <div
                      class="c20"
                    >
                      <span
                        class="c16"
                        color="neutral"
                      >
                        Teléfono
                      </span>
                      <div
                        class="c5"
                      />
                      <span
                        class="c21"
                      >
                        356 - 55512345
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td>
                    <div
                      class="c20"
                    >
                      <span
                        class="c16"
                        color="neutral"
                      >
                        DNI
                      </span>
                      <div
                        class="c5"
                      />
                      <span
                        class="c21"
                      >
                        30000000
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td>
                    <div
                      class="c20"
                    >
                      <span
                        class="c16"
                        color="neutral"
                      >
                        Fecha de caducidad del documento
                      </span>
                      <div
                        class="c5"
                      />
                      <span
                        class="c21"
                      >
                        12/29/2023
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ClientCard renders the ClientCard component close dupicate modal 1`] = `
<body>
  <div />
</body>
`;

exports[`ClientCard renders the ClientCard component close dupicate modal 2`] = `
<body>
  <div>
    <div
      data-testid="client-card"
    >
      <div
        data-isopen="true"
        data-testid="card-modal"
      />
    </div>
  </div>
</body>
`;

exports[`ClientCard renders the ClientCard component close dupicate modal 3`] = `
<body>
  <div>
    <div
      data-testid="client-card"
    />
  </div>
</body>
`;

exports[`ClientCard renders the ClientCard component select person in dupicate modal 1`] = `
.c7 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0.01em;
  -moz-letter-spacing: 0.01em;
  -ms-letter-spacing: 0.01em;
  letter-spacing: 0.01em;
  font-family: Roboto;
  color: inherit;
}

.c16 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0.01em;
  -moz-letter-spacing: 0.01em;
  -ms-letter-spacing: 0.01em;
  letter-spacing: 0.01em;
  font-family: Roboto;
  color: #8D8DA6;
}

.c23 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: 0.01em;
  -moz-letter-spacing: 0.01em;
  -ms-letter-spacing: 0.01em;
  letter-spacing: 0.01em;
  font-family: Roboto;
  color: #242433;
}

.c4 {
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
  font-family: Work Sans;
  color: #242433;
}

.c14 {
  fill: #105225;
}

.c19 {
  fill: #801F19;
}

.c1 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  grid-column-gap: 16px;
  grid-row-gap: 16px;
  max-width: 1224px;
  margin: auto;
}

.c10 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  grid-column-gap: 12px;
  grid-row-gap: 12px;
  max-width: 1224px;
  margin: auto;
}

.c2 {
  justify-self: start;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  grid-column: span 6;
}

.c8 {
  grid-column: span 12;
}

.c11 {
  justify-self: start;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  grid-column: span 12;
}

.c6 {
  padding: 2px 12px;
  background-color: #FFE6E5;
  color: #801F19;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 1000px;
}

.c13 {
  padding: 2px 12px 2px 8px;
  background-color: #E0FFEA;
  color: #105225;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 1000px;
}

.c18 {
  padding: 2px 12px 2px 8px;
  background-color: #FFE6E5;
  color: #801F19;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 1000px;
}

.c5 {
  margin-right: 12px;
}

.c15 {
  margin-right: 8px;
}

.c17 {
  margin-top: 8px;
}

.c20 {
  margin-top: 12px;
}

.c21 {
  width: 100%;
  border-color: #F0F0FA;
  border-width: 1px;
  border-style: solid;
  border-radius: 8px;
  background-color: #FAFAFF;
}

.c21 th,
.c21 td {
  padding: 8px;
  text-align: left;
}

.c21 th:nth-child(,1,),
.c21 td:nth-child(,1,) {
  width: ,100,%;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  width: 100%;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  display: block;
  width: 100%;
  border-width: 1px;
  border-style: solid;
  padding: 16px;
  background-color: #FFFFFF;
  border-color: #D5D5E7;
  border-radius: 16px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:1366px) {
  .c1 {
    grid-gap: 24px;
  }
}

@media (min-width:1366px) {
  .c10 {
    grid-gap: 24px;
  }
}

@media (min-width:768px) {

}

@media (min-width:1024px) {

}

@media (min-width:1366px) {

}

@media (min-width:1920px) {

}

@media (min-width:768px) {

}

@media (min-width:1024px) {

}

@media (min-width:1366px) {

}

@media (min-width:1920px) {

}

@media (min-width:768px) {

}

@media (min-width:1024px) {

}

@media (min-width:1366px) {

}

@media (min-width:1920px) {

}

<body>
  <div>
    <div
      data-testid="client-card"
    >
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <div
              class="c3"
            >
              <div
                aria-level="5"
                class="c4"
                role="heading"
              >
                Facundo
                 
                Perez
              </div>
              <div
                class="c5"
              />
              <div
                class="c6"
                color="red"
              >
                <span
                  class="c7"
                  color="inherit"
                >
                  DNI caducado
                </span>
              </div>
            </div>
          </div>
          <div
            class="c8"
          >
            <div
              class="c9"
            >
              <div>
                <div
                  class="c10"
                  spacing="s"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c12"
                    >
                      <div
                        class="c13"
                        color="green"
                      >
                        <svg
                          class="c14"
                          color="green"
                          fill="none"
                          viewBox="0 0 28 28"
                          width="20px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M19.996 9.56a.778.778 0 0 1 0 1.1l-7.78 7.78a.778.778 0 0 1-1.1 0l-3.112-3.112a.778.778 0 0 1 1.1-1.1l2.562 2.562 7.23-7.23a.778.778 0 0 1 1.1 0Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                        <span
                          class="c7"
                          color="inherit"
                        >
                          Email Validado
                        </span>
                      </div>
                      <div
                        class="c15"
                      />
                      <span
                        class="c16"
                        color="neutral"
                      >
                        El cliente ya validó su correo electrónico
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="c17"
                />
              </div>
              <div>
                <div
                  class="c10"
                  spacing="s"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c12"
                    >
                      <div
                        class="c13"
                        color="green"
                      >
                        <svg
                          class="c14"
                          color="green"
                          fill="none"
                          viewBox="0 0 28 28"
                          width="20px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M19.996 9.56a.778.778 0 0 1 0 1.1l-7.78 7.78a.778.778 0 0 1-1.1 0l-3.112-3.112a.778.778 0 0 1 1.1-1.1l2.562 2.562 7.23-7.23a.778.778 0 0 1 1.1 0Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                        <span
                          class="c7"
                          color="inherit"
                        >
                          Validado en Renaper
                        </span>
                      </div>
                      <div
                        class="c15"
                      />
                      <span
                        class="c16"
                        color="neutral"
                      >
                        El cliente ya validó su identidad en el Registro Nacional de las Personas
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="c17"
                />
              </div>
              <div>
                <div
                  class="c10"
                  spacing="s"
                >
                  <div
                    class="c11"
                  >
                    <div
                      class="c12"
                    >
                      <div
                        class="c18"
                        color="red"
                      >
                        <svg
                          class="c19"
                          color="red"
                          fill="none"
                          viewBox="0 0 28 28"
                          width="20px"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M11.98 8.168c.898-1.555 3.142-1.555 4.04 0l5.387 9.331c.898 1.555-.224 3.5-2.02 3.5H8.613c-1.796 0-2.918-1.945-2.02-3.5l5.387-9.33Zm2.693.778a.778.778 0 0 0-1.346 0l-5.388 9.33a.778.778 0 0 0 .674 1.167h10.774a.778.778 0 0 0 .674-1.166l-5.388-9.331ZM14 11.667c.43 0 .778.348.778.778V14a.778.778 0 0 1-1.556 0v-1.555c0-.43.349-.778.778-.778Zm-.778 5.443c0-.43.349-.777.778-.777h.008a.778.778 0 0 1 0 1.555H14a.778.778 0 0 1-.778-.778Z"
                            fill-rule="evenodd"
                          />
                        </svg>
                        <span
                          class="c7"
                          color="inherit"
                        >
                          No Validado en Facephi
                        </span>
                      </div>
                      <div
                        class="c15"
                      />
                      <span
                        class="c16"
                        color="neutral"
                      >
                        El cliente no validó su identidad biométrica
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="c17"
                />
              </div>
            </div>
            <div
              class="c20"
            />
            <table
              class="c21"
            >
              <tbody>
                <tr>
                  <td>
                    <div
                      class="c22"
                    >
                      <span
                        class="c16"
                        color="neutral"
                      >
                        Fecha de Nacimiento
                      </span>
                      <div
                        class="c5"
                      />
                      <span
                        class="c23"
                      >
                        3/1/2001
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td>
                    <div
                      class="c22"
                    >
                      <span
                        class="c16"
                        color="neutral"
                      >
                        Email
                      </span>
                      <div
                        class="c5"
                      />
                      <span
                        class="c23"
                      >
                        facundo@gmail.com
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td>
                    <div
                      class="c22"
                    >
                      <span
                        class="c16"
                        color="neutral"
                      >
                        Dirección Legal
                      </span>
                      <div
                        class="c5"
                      />
                      <span
                        class="c23"
                      >
                        Castillo • 1414 • CABA
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td>
                    <div
                      class="c22"
                    >
                      <span
                        class="c16"
                        color="neutral"
                      >
                        Teléfono
                      </span>
                      <div
                        class="c5"
                      />
                      <span
                        class="c23"
                      >
                        299 - 55512345
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td>
                    <div
                      class="c22"
                    >
                      <span
                        class="c16"
                        color="neutral"
                      >
                        DNI
                      </span>
                      <div
                        class="c5"
                      />
                      <span
                        class="c23"
                      >
                        30000001
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td>
                    <div
                      class="c22"
                    >
                      <span
                        class="c16"
                        color="neutral"
                      >
                        Fecha de caducidad del documento
                      </span>
                      <div
                        class="c5"
                      />
                      <span
                        class="c23"
                      >
                        12/29/2023
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
